--- a/style.css
+++ b/style.css
@@ -16,20 +16,19 @@ body {
 
 .main {
 
-    height:70vh;
-    width: 100%;
+    height: 644px;
     background-image: url("Assets/bg2.jpg");
     position: relative;
     background-position: center center ;
     background-repeat: no-repeat; 
     background-size: max(1200px,100vw);
     padding-bottom: 210px;
-    text-align: center;
+
     
 }
 nav{
     height: 100px;
-    max-width: 80vw;
+    max-width: 76vw;
     /* padding-top: 10px; */
     margin:auto;
     display: flex;
@@ -46,7 +45,7 @@ nav{
 
 .box {
 
-    height: 70vh;
+    height: 644px;
     width: 100%;
     opacity: 0.69;
     position: absolute;
@@ -72,10 +71,11 @@ nav{
     background-color: red;
     position: relative;
     z-index: 1;
-    padding: 6px 15px;
+    padding: 9px 10px;
     font-weight: 600;
     letter-spacing: 1px;
     margin-left: 20px;
+    border: 0;
   
 
 }
@@ -130,9 +130,11 @@ nav{
     position: relative;
     font-size: larger;
     z-index: 1;
-    padding: 6px 15px;
+    padding: 17px 28px;
     font-weight: 600;
     margin-left: 20px;
+    border: 0;
+
 
 }
 input{
@@ -140,7 +142,7 @@ input{
     width: 350px;
     font-size: medium;
     border-radius: 5px;
-    color: white;
+    color: whitesmoke;
     background-color: black;
     opacity: 0.5;
     position: relative;
@@ -160,14 +162,16 @@ input{
 
     display: flex;
     padding-bottom: 100px; 
-    text-align: center;
-    text-wrap: wrap;
+    /* text-align: center; */
+    /* text-wrap: wrap; */
 }
 
 .con-text{
 
     margin-top: 200px;
     margin-left:170px;
+    margin-bottom: 200px;
+
     padding-right: 70px;
 
 }
@@ -175,20 +179,33 @@ input{
 .con-text >:first-child{
     font-size: 40px;
      font-weight: bold;
-     text-align: center;
+     /* text-align: center; */
 }
 
 .con-text >:nth-child(2){
 
     font-size: 20px;
     font-weight: 300;
-    text-align: center;
+    /* text-align: center; */
+}
+.con-img{
+    position: relative;
 }
 .img{
     margin-top: 100px;
-    height: 400px;
+    /* height: 400px; */
+    width: 40vw;
+    position: absolute;
+    z-index: 1;
 
 }
+.video{
+    position: absolute;
+    padding-top: 170px;
+    padding-left: 60px;
+    width: 35vw;
+}
+
 
 
 
@@ -204,22 +221,24 @@ input{
 
 }
 .img2{
-    height: 400px ;
+    /* height: 400px ; */
+    width: 35vw;
 }
 .con-text2{
-    margin-top: 250px;
+    margin-top: 200px;
+    margin-left:50px;
 }
 .con-text2 >:first-child{
     font-size: 40px;
      font-weight: bold;
-     text-align: center;
+     /* text-align: center; */
 }
 
 .con-text2 >:nth-child(2){
 
     font-size: 20px;
     font-weight: 300;
-    text-align: center;
+    /* text-align: center; */
 }
 .con-img3{
 
@@ -227,11 +246,26 @@ input{
     margin-left:100px;
     
 }
+.img3{
+
+    /* margin-top: 100px; */
+    /* height: 400px; */
+    width: 40vw;
+    position: absolute;
+    z-index: 1;
+}
+.video2{
+    position: absolute;
+    padding-top: 60px;
+    padding-left: 105px;
+    width: 25vw;
+}
 .con-text3{
 
     margin-top: 200px;
     margin-left:200px;
-    text-align: center;
+    margin-bottom: 200px;
+    /* text-align: center; */
 
 }
 
@@ -248,6 +282,7 @@ input{
 }
 
 .faq> h1{
+    font-size: 48px;
     text-align: center;
     padding-top: 100PX;
 }
