--- a/Netflix.css
+++ b/Netflix.css
@@ -201,9 +201,10 @@ input{
 }
 .video{
     position: absolute;
-    padding-top: 170px;
-    padding-left: 60px;
-    width: 35vw;
+    padding-top: 190px;
+    padding-left: 80px;
+    /* padding-right: 100px; */
+    width: 30vw;
 }
 
 
