--- a/Netflix.css
+++ b/Netflix.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Martel+Sans:wght@600;900&family=Playpen+Sans:wght@200;300;400;500;600&family=Roboto:wght@400;700&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Martel+Sans:wght@600;900&family=Playpen+Sans:wght@200;300;400;500;600&family=Roboto:wght@400;700&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap'); */
 *{
     padding: 0px;
     margin: 0px;
@@ -36,6 +36,12 @@ nav{
     align-items: center;
     
 }
+.tab{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;;
+}
 .logo{
     
     height: 40px;
@@ -54,16 +60,26 @@ nav{
     padding-bottom: 210px;
 }
 .lang-logo{
-    height: 5px ;
+    height: 16px ;
+    position: absolute;
+    z-index: 2;
+    padding-left: 18px;
+   
+    /* left: 0; */
+    /* top: 0; */
+    /* background-color: aqua; */
 }
 .lang{
     border-radius: 3px;
+    height: 34px;
+    border: 2px solid rgb(85 85 85);
     color: white;
     background-color: transparent;
     position: relative;
     z-index: 1;
-    padding: 6px 15px;
-   
+    margin: 10px ;
+    padding-left: 30px;
+    padding-right: 12px;
     font-weight: 600;
 }
 .signin{
@@ -138,6 +154,12 @@ nav{
 
 
 }
+.submit:hover{
+    background-color: #c80711;
+    /* color: rgb(85, 85, 85); */
+
+}
+
 input{
     height: 56px;
     width: 350px;
@@ -342,4 +364,68 @@ input{
     text-align: center;
     padding-top: 100PX;
 }
+.question{
+    /* height: 60px; */
+    /* justify-content: center; */
+    align-items: center;
+    
+    background-color: #2d2d2d;
+    margin: 20px 200px;
+    padding: 20px 30px;
+    /* display: flex; */
+     
+}
+
+.question:hover{
+    cursor: pointer;
+    background-color: rgb(85 85 85);
+}
+.question-title{
+    display: flex;
+    font-size: 15px;
+    /* margin-right: 600px; */
+    /* row-gap: 10px; */
+    /* padding-right: 600px; */
+    justify-content: space-between;
+}
+
+.plus{
+    /* display: flex; */
+    align-items: center;
+    justify-content: center;
+    height: 30px;
+    /* margin-left: 820px;
+    padding-top: 5px; */
+
+
+}
+.text2{
+    margin-top: 60px;
+    margin-bottom: 60px;
+    font-size: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+.text2 input{
+    color: inherit;
+    background-color: #2d2d2d;
+    /* filter: opacity(0%); */
+}
+footer{
+    display: grid;
+    margin: 100px 200px;
+    color: #b3b3b3;
+}
+footer a{
+    color: #b3b3b3;
+}
+li{
+    list-style: none;
+    margin: 30px;
+    
+}
+
+
 
