--- a/Netflix.css
+++ b/Netflix.css
@@ -1,4 +1,4 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Martel+Sans:wght@600;900&family=Playpen+Sans:wght@200;300;400;500;600&family=Roboto:wght@400;700&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Martel+Sans:wght@600;900&family=Playpen+Sans:wght@200;300;400;500;600&family=Roboto:wght@400;700&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 *{
     padding: 0px;
     margin: 0px;
@@ -414,17 +414,44 @@ input{
     /* filter: opacity(0%); */
 }
 footer{
-    display: grid;
-    margin: 100px 200px;
+    /* display: flex; */
+    margin: 50px 200px;
     color: #b3b3b3;
+    position: relative;
+    
 }
 footer a{
     color: #b3b3b3;
+    
 }
 li{
     list-style: none;
-    margin: 30px;
-    
+    margin: 10px;
+    font-size: small;
+}
+.call{
+    margin-bottom: 10px;
+}
+.list{
+    display: flex;
+    /* flex-direction: column; */
+    /* align-items: center; */
+    justify-content: space-between;
+    margin-right: 200px;
+}
+.lang-logo2{
+    height: 16px ;
+    position: absolute;
+    z-index: 2;
+    margin-top: 19px;
+    padding-left: 20px;
+  
+}
+footer p{
+    font-size: small;
+    margin-top: 10px;
+    /* margin-bottom: 10px; */
+    margin-left: 10px;
 }
 
 
